# barnowl

./: .gbp.conf  .gitignore  .mailmap  .travis.yml  AUTHORS  BUGS  COPYING  ChangeLog  Makefile  Makefile.PL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  aim.c  athstatic  autogen.sh  barnowl  barnowl-wrapper.in  barnowl_1.0.0.orig.tar.gz.delta  barnowl_1.0.0.orig.tar.gz.id  barnowl_1.0.1.orig.tar.gz.delta  barnowl_1.0.1.orig.tar.gz.id  barnowl_1.0.3.orig.tar.gz.delta  barnowl_1.0.3.orig.tar.gz.id  barnowl_1.0.5.orig.tar.gz.delta  barnowl_1.0.5.orig.tar.gz.id  buddy.c  buddylist.c  closures.c  cmd.c  codelist.pl  commands.c  config.h.in  configure  configure.ac  configure.in  context.c  (+77 more)
autom4te.cache/: output.1  requests  traces.0  traces.1
compat/: Makefile.am  compat.h  memrchr.c
debian/: README.Debian  barnowl-irc.install  barnowl.docs  barnowl.install  changelog  clean  control  control.in  copyright  prepsource  rules  shlibs.local  watch
doc/: advanced.txt  barnowl.1  code.txt  contributors  intro.txt  owl-window.txt  owl.1  owlconf-dbi  releasing-barnowl.txt  zephyr_log.sql
examples/: owlconf.erik  owlconf.simple  owlconf.vtformat
libfaim/: Makefile  Makefile.am  Makefile.in  admin.c  adverts.c  aim.h  aim_cbtypes.h  aim_internal.h  auth.c  bart.c  bos.c  bstream.c  buddylist.c  chat.c  chatnav.c  config.h.in  config.status  configure  configure.ac  configure.in  conn.c  email.c  faimconfig.h  ft.c  icq.c  im.c  info.c  invite.c  locate.c  meta.c  misc.c  msgcookie.c  newsearch.c  odir.c  oscar.c  popups.c  rxhandlers.c  rxhandlers.c.orig  rxqueue.c  search.c  (+8 more)
libfaim/autom4te.cache/: output.0  requests  traces.0
m4/: ax_check_flag.m4
perl/: Makefile.am
perl/lib/: BarnOwl.pm
perl/lib/BarnOwl/: AnyEvent.pm  Completion.pm  DeferredLogging.pm  Editwin.pm  Help.pm  Hook.pm  Hooks.pm  Logging.pm  MainLoopCompatHook.pm  Message.pm  ModuleLoader.pm  Parse.pm  Style.pm  Timer.pm  Zephyr.pm
perl/lib/BarnOwl/Complete/: AIM.pm  Client.pm  Filter.pm  Zephyr.pm
perl/lib/BarnOwl/Completion/: Context.pm  Util.pm
perl/lib/BarnOwl/Message/: AIM.pm  Admin.pm  Generic.pm  Loopback.pm  Zephyr.pm
perl/lib/BarnOwl/Style/: Basic.pm  Default.pm  Legacy.pm  OneLine.pm
perl/lib/Module/Install/: BarnOwl.pm
perl/lib/Net/: Jabber.pm  XMPP.pm
perl/lib/Net/Jabber/: Client.pm  Component.pm  Data.pm  Debug.pm  Dialback.pm  IQ.pm  Key.pm  Log.pm  MUC.pm  Message.pm  Namespaces.pm  Presence.pm  Protocol.pm  Server.pm  Stanza.pm  XDB.pm
perl/lib/Net/Jabber/Dialback/: Result.pm  Verify.pm
perl/lib/Net/XMPP/: Client.pm  Connection.pm  Debug.pm  IQ.pm  JID.pm  Message.pm  Namespaces.pm  Presence.pm  Protocol.pm  Roster.pm  Stanza.pm
perl/lib/XML/: Stream.pm
perl/lib/XML/Stream/: Parser.pm  XPath.pm
perl/lib/XML/Stream/Parser/: DTD.pm
perl/lib/XML/Stream/XPath/: Query.pm  Value.pm
perl/modules/: .gitignore  Makefile.am  Makefile.in  jabber.pl
perl/modules/AIM/: Makefile.PL
perl/modules/AIM/lib/BarnOwl/Module/: AIM.pm
perl/modules/AIM/lib/Net/OSCAR/: XML.pm
perl/modules/AIM/lib/Net/OSCAR/Callbacks/: INDEX
perl/modules/AIM/lib/Net/OSCAR/XML/: Protocol.dtd
perl/modules/Facebook/: .gitignore  Makefile.PL  README
perl/modules/Facebook/lib/: Ouch.pm
perl/modules/Facebook/lib/AnyEvent/: HTTP.pm
perl/modules/Facebook/lib/BarnOwl/Message/: Facebook.pm
perl/modules/Facebook/lib/BarnOwl/Module/: Facebook.pm
perl/modules/Facebook/lib/BarnOwl/Module/Facebook/: Handle.pm
perl/modules/Facebook/lib/Facebook/: Graph.pm
perl/modules/Facebook/lib/Facebook/Graph/: AccessToken.pm  Authorize.pm  Cookbook.pod  Picture.pm  Publish.pm  Query.pm  Response.pm  Session.pm
perl/modules/Facebook/lib/Facebook/Graph/AccessToken/: Response.pm
perl/modules/Facebook/lib/Facebook/Graph/Cookbook/: Recipe1.pod  Recipe2.pod
perl/modules/Facebook/lib/Facebook/Graph/Publish/: Checkin.pm  Comment.pm  Event.pm  Like.pm  Link.pm  Note.pm  Post.pm  RSVPAttending.pm  RSVPDeclined.pm  RSVPMaybe.pm
perl/modules/Facebook/lib/Facebook/Graph/Role/: Uri.pm
perl/modules/Facebook/lib/URI/: Encode.pm
perl/modules/IRC/: Makefile.PL
perl/modules/IRC/inc/Module/Install/: Fetch.pm  Makefile.pm  Metadata.pm  Win32.pm
perl/modules/IRC/lib/BarnOwl/Message/: IRC.pm
perl/modules/IRC/lib/BarnOwl/Module/: IRC.pm
perl/modules/IRC/lib/BarnOwl/Module/IRC/: Completion.pm  Connection.pm
perl/modules/Jabber/: Makefile.PL
perl/modules/Jabber/inc/Module/Install/: BarnOwl.pm  Fetch.pm  Makefile.pm  Metadata.pm  Win32.pm
perl/modules/Jabber/lib/BarnOwl/Message/: Jabber.pm
perl/modules/Jabber/lib/BarnOwl/Module/: Jabber.pm
perl/modules/Jabber/lib/BarnOwl/Module/Jabber/: Connection.pm  ConnectionManager.pm  Impl.pm
perl/modules/Jabber/lib/Net/: Jabber.pm  XMPP.pm
perl/modules/Jabber/lib/Net/Jabber/: Client.pm  Component.pm  Data.pm  Dialback.pm  IQ.pm  JID.pm  Key.pm  Log.pm  MUC.pm  Message.pm  Namespaces.pm  Presence.pm  Protocol.pm  Server.pm  Stanza.pm  XDB.pm
perl/modules/Jabber/lib/Net/Jabber/Dialback/: Result.pm  Verify.pm
perl/modules/Jabber/lib/Net/XMPP/: Client.pm  Connection.pm  Debug.pm  IQ.pm  JID.pm  Message.pm  Namespaces.pm  Presence.pm  PrivacyLists.pm  Protocol.pm  Roster.pm  Stanza.pm
perl/modules/Jabber/lib/XML/: Stream.pm
perl/modules/Jabber/lib/XML/Stream/: Namespace.pm  Node.pm  Parser.pm  Tree.pm
perl/modules/Jabber/lib/XML/Stream/XPath/: Op.pm  Query.pm  Value.pm
perl/modules/Kerberos/: Makefile.PL
perl/modules/Kerberos/lib/BarnOwl/Module/: Kerberos.pm
perl/modules/Twitter/: .gitignore  .hgignore  README  twitter.example
perl/modules/Twitter/lib/BarnOwl/Message/: Twitter.pm
perl/modules/Twitter/lib/BarnOwl/Module/: Twitter.pm
perl/modules/Twitter/lib/BarnOwl/Module/Twitter/: Completion.pm  Handle.pm
perl/modules/WordWrap/: Makefile.PL
perl/modules/WordWrap/inc/Module/Install/: Metadata.pm
perl/modules/WordWrap/lib/BarnOwl/Module/: WordWrap.pm
perl/modules/Zulip/: Makefile.PL  README
perl/modules/Zulip/lib/BarnOwl/Message/: Zulip.pm
perl/modules/Zulip/lib/BarnOwl/Module/: Zulip.pm
scripts/: add-changelog  dist-ignore  (+3 more)
(+12 files in other folders)
