SUBDIRS = modules
nobase_dist_pkgdata_DATA = \
	lib/BarnOwl.pm \
	lib/BarnOwl/Complete/Client.pm \
	lib/BarnOwl/Complete/Filter.pm \
	lib/BarnOwl/Complete/Zephyr.pm \
	lib/BarnOwl/Completion.pm \
	lib/BarnOwl/Completion/Context.pm \
	lib/BarnOwl/Completion/Util.pm \
	lib/BarnOwl/DeferredLogging.pm \
	lib/BarnOwl/Editwin.pm \
	lib/BarnOwl/Help.pm \
	lib/BarnOwl/Hook.pm \
	lib/BarnOwl/Hooks.pm \
	lib/BarnOwl/Logging.pm \
	lib/BarnOwl/MainLoopCompatHook.pm \
	lib/BarnOwl/Message.pm \
	lib/BarnOwl/Message/Admin.pm \
	lib/BarnOwl/Message/Generic.pm \
	lib/BarnOwl/Message/Loopback.pm \
	lib/BarnOwl/Message/Zephyr.pm \
	lib/BarnOwl/ModuleLoader.pm \
	lib/BarnOwl/Parse.pm \
	lib/BarnOwl/Style.pm \
	lib/BarnOwl/Style/Basic.pm \
	lib/BarnOwl/Style/Default.pm \
	lib/BarnOwl/Style/Legacy.pm \
	lib/BarnOwl/Style/OneLine.pm \
	lib/BarnOwl/Timer.pm \
	lib/BarnOwl/Zephyr.pm \
	lib/Module/Install/BarnOwl.pm
